welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:10: error: type mismatch;
 found   : Int
 required: Boolean
  } else if (vitmax1 + 1 <= speed <= vitmax2) {
                                     ^